# HtmlGrapheasTestApp_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  build_Android.sh  build_Linux_with_config.sh  build_Windows_MSVC_Debug.cmd  build_Windows_MSVC_Release.cmd  build_Windows_MSVC_with_config.cmd  build_Windows_MinGW_with_config.cmd  build_Windows_MinGW_with_config.sh  gradle.properties  settings.gradle
cmake/libcmaker/: build_agg.cmake  build_dirent.cmake  build_expat.cmake  build_fontconfig.cmake  build_freetype_with_harfbuzz.cmake  build_googletest.cmake  build_icu.cmake  build_icu_host_tools.cmake  build_stlcache.cmake  build_wxwidgets.cmake
gradle/wrapper/: gradle-wrapper.properties
host_tools/: CMakeLists.txt
platform/Android/HtmlGrapheasApp/: .gitignore  build.gradle
platform/Android/HtmlGrapheasApp/src/androidTest/java/ru/htmlgrapheas/htmlgrapheasapp/: ExampleInstrumentedTest.java
platform/Android/HtmlGrapheasApp/src/main/: AndroidManifest.xml
platform/Android/HtmlGrapheasApp/src/main/java/ru/htmlgrapheas/htmlgrapheasapp/: MainActivity.java
platform/Android/HtmlGrapheasApp/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
platform/Android/HtmlGrapheasApp/src/main/res/values/: colors.xml  strings.xml
platform/Android/HtmlGrapheasApp/src/test/java/ru/htmlgrapheas/htmlgrapheasapp/: ExampleUnitTest.java
platform/android/HtmlGrapheasApp/: build.gradle  proguard-rules.pro
platform/android/HtmlGrapheasApp/src/main/: AndroidManifest.xml
platform/android/HtmlGrapheasApp/src/main/res/drawable/: ic_launcher_background.xml
platform/android/HtmlGrapheasApp/src/main/res/drawable-v24/: ic_launcher_foreground.xml
platform/android/HtmlGrapheasApp/src/main/res/layout/: activity_main.xml
platform/android/HtmlGrapheasApp/src/main/res/values/: strings.xml  styles.xml
platform/wxWidgets/: CMakeLists.txt
platform/wxWidgets/cmake/: build_wxwidgets.cmake
platform/wxwidgets/: CMakeLists.txt
platform/wxwidgets/src/hgapp/: main.cpp
